[tool.poetry]
name = "luna"
version = "0.1.0"
description = "Luna, the game"
authors = ["Elle Trudgett <elle.trudgett@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
arcade = "3.0.0.dev28"
pytiled-parser = "^2.2.3"
rich = "^13.7.1"
shapely = "^2.0.4"
distance3d = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
black = "^24.4.2"
mypy = "^1.10.0"

[tool.flake8]
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
